[project]
name = "sangin-snoop"
version = "1.0.0"
description = "Watch availability checker for Sangin Instruments tactical watches"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "arandomguyhere"}
]
keywords = ["sangin", "watches", "availability", "scraper", "discord"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "requests>=2.28.0,<3.0.0",
    "beautifulsoup4>=4.11.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/arandomguyhere/Sangin-Snoop"
Repository = "https://github.com/arandomguyhere/Sangin-Snoop"
Issues = "https://github.com/arandomguyhere/Sangin-Snoop/issues"

[project.scripts]
sangin-snoop = "Sanginsnoop:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["Sanginsnoop"]
